[project]
name = "workflow-audit-mcp"
version = "0.1.0"
description = "MCP server for auditing ML training experiment specs before SageMaker submission"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
]

[project.scripts]
workflow-audit-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
